# wise

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: routes.py  schemas.py
app/core/: config.py  logging.py
app/db/: database.py  models.py
app/scraper/: browser.py  parser.py  scraper.py
app/services/: ai_classifier.py  hiring_signal_engine.py
app/tasks/: runner.py  scheduler.py
tests/: conftest.py  test_ai_classifier.py  test_hiring_signal.py  test_models.py  test_parser.py
